--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--
+Author : MARDAY Sendinee
+-->
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -373,7 +376,7 @@
                 <i class="ri-mail-send-line"></i>
                 <div class="media-body"><a class="white" href="mailto:formasmart.fs@gmail.com">formasmart.fs@gmail.com</a></div>
               </div>
-
+              <br>
               <div>
                 <i class="ri-phone-line"></i>
                 <p>06 08 70 50 01</p>
