--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,3 +1,6 @@
+<!--
+Author : MARDAY Sendinee
+-->
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -197,8 +200,8 @@
                     CRM ;(iii) Le cas échéant : les organismes publics et privés, exclusivement pour répondre à nos obligations légales.</p>
                 </li>
                 <li class="media">
-                  <p><strong>5. Vos données sont-elles susceptibles d'être transférées hors de l'Union Européenne ?</strong></p>
-                  <p><strong>Vos données sont conservées et stockées pendant toute la durée des traitements sur les serveurs de la société Amazon Web
+                  <p><strong>5. Vos données sont-elles susceptibles d'être transférées hors de l'Union Européenne ?</strong><br>
+                  <strong>Vos données sont conservées et stockées pendant toute la durée des traitements sur les serveurs de la société Amazon Web
                     Services situés dans l’Union européenne.</strong><br>
                     Dans le cadre des outils que nous utilisons (voir article sur les destinataires concernant nos sous-traitants), vos données sont
                     susceptibles de faire l’objet de transferts hors de l’Union européenne. Le transfert de vos données dans ce cadre est sécurisé au
@@ -211,9 +214,7 @@
         </div><!-- END : .row -->
       </div><!-- END : .container -->
     </div><!-- END : .ex-basic-2 -->
-
-
-
+    <!-- END : Privacy Content -->
   </main><!-- END : main -->
 
 <!-- Footer -->
