--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Author : MARDAY Sendinee
           <h1 data-aos="fade-up">G&#233;rer un projet Scrum avec Forma Smart</h1>
           <h2 data-aos="fade-up" data-aos-delay="400">Cette formation est un v&#233;ritable tremplin pour votre entreprise. En effet, vous allez y apprendre le B-A BA de la gestion d'un projet agile.</h2>
           <div data-aos="fade-up" data-aos-delay="800">
-            <a href="#about" class="btn-get-started scrollto">En savoir +</a>
+            <a href="index.html#information" class="btn-get-started scrollto">En savoir +</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
@@ -193,7 +193,7 @@ Author : MARDAY Sendinee
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bxs-file-doc"></i></div>
+              <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-one-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 1: Pr&#233;sentation de la m&#233;thode Agile</h4>
               <p class="description">
                 <ul>
@@ -209,7 +209,7 @@ Author : MARDAY Sendinee
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bxs-file-doc"></i></div>
+              <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-two-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 2: SRCUM</h4>
               <p class="description">
                 <ul>
@@ -226,7 +226,7 @@ Author : MARDAY Sendinee
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bxs-file-doc"></i></div>
+              <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-three-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 3: Pour aller plus loin</h4>
               <p class="description">
                 <ul>
@@ -241,7 +241,7 @@ Author : MARDAY Sendinee
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bxs-file-doc"></i></div>
+              <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-four-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 4: Conclusion</h4>
               <p class="description">
                 <ul>
