--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@ Author : MARDAY Sendinee
             </div>
           </div>
 
+          <button class="button button1"><a href="https://eu.docworkspace.com/d/sIBGOuLw-4umukAY">Télécharger le programme</a></button>
+
         </div>
 
       </div>
@@ -369,7 +371,7 @@ Author : MARDAY Sendinee
             <div class="info">
               <div>
                 <i class="ri-map-pin-line"></i>
-                <p>16 Rue du Tiers Pot<br>95 140 Garges-l&#232;s-Gonnesse</p>
+                <a href="https://goo.gl/maps/JR1HaRdDLxzBdpg97"><p>16 Rue du Tiers Pot<br>95 140 Garges-l&#232;s-Gonnesse</p></a>
               </div>
 
               <div>
