--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ Author : MARDAY Sendinee
             <a href="#intro" class="scrollto">Home</a>
             <a href="#projet" class="scrollto">Projet</a>
             <a href="privacy_policy.html">Politique de Confidentialité</a>
-            <a href="condition.html">Conditions Générales de Vente</a>
+            <a href="condition.html">CGV</a>
           </nav>
         </div><!-- END : .col-lg-6 -->
       </div><!-- END : .row d-flex align-items-center -->
