--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!--
-Author : MARDAY Sendinee
+*
+* Author : MARDAY Sendinee
+*
 -->
 <!DOCTYPE html>
 <html lang="fr">
@@ -8,7 +10,7 @@ Author : MARDAY Sendinee
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Forma Smart</title>
+  <title>Forma Smart - Srcum</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -93,7 +95,7 @@ Author : MARDAY Sendinee
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/datadock.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="200">
+            <img src="assets/img/clients/qualiopi.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="200">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
@@ -123,8 +125,8 @@ Author : MARDAY Sendinee
               Profils des apprenants :
             </strong></p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Toute personne amen&#233;e &#224; g&#233;rer des projets Agiles</li>
-              <li><i class="ri-check-double-line"></i> toute personne amen&#233;e &#224; travailler en mode projet et qui souhaite d&#233;couvrir un nouvelle approche</li>
+              <li><i class="ri-check-double-line"></i>  Formateurs</li>
+              <li><i class="ri-check-double-line"></i>  Gestionnaires d'organisme de formation</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
@@ -132,7 +134,8 @@ Author : MARDAY Sendinee
               Pr&#233;requis :
             </strong></p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Avoir des connaissances de base en gestion de projet. Agilit&#233; </li>
+              <li><i class="ri-check-double-line"></i> Connaissance basique du secteur de la formation professionnelle </li>
+              <li><i class="ri-check-double-line"></i> Bases de l'usage d'internet et d'un navigateur web</li>
             </ul>
           </div>
         </div><!-- END : .row content-->
@@ -145,7 +148,7 @@ Author : MARDAY Sendinee
 
         <div class="row">
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-xl-start" data-aos="fade-right" data-aos-delay="150">
-            <img src="assets/img/counts-img.svg" alt="" class="img-fluid">
+            <img src="assets/img/scrum.png" alt="" class="img-fluid">
           </div>
 
           <div class="col-xl-7 d-flex align-items-stretch pt-4 pt-xl-0" data-aos="fade-left" data-aos-delay="300">
@@ -154,16 +157,16 @@ Author : MARDAY Sendinee
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-emoji-smile"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Taux de Satisfaction :</strong> 5/5 </p>
+                    <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
+                    <p><strong>TAUX DE SATISFACTION</strong></p>
                   </div>
                 </div>
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-award"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="75" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Taux de r&#233;pondre :</strong> 5/5 </p>
+                    <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
+                    <p><strong>TAUX DE REPONSE</strong></p>
                   </div>
                 </div><!-- END : col-md-6 d-md-flex align-items-md-stretch -->
               </div><!-- END : .row-->
@@ -182,10 +185,14 @@ Author : MARDAY Sendinee
           <h2>G&#233;rer un projet Scrum</h2>
           <p><strong>OBJECTIFS P&#201;DAGOGIQUES :</strong><br>
             <ul>
-              <p><i class="ri-check-double-line"></i> Apprendre comment adopter une m&#233;thode Agile (Scrum) pour r&#233;aliser vos projets<br>
-              <i class="ri-check-double-line"></i> Optimiser la qualit&#233;, les d&#233;lais, le budget et les ressources humaines allou&#233;s &#224; vos projets</p>
+              <p>
+                <i class="ri-check-double-line"></i> Créer un catalogue de formations dans Digiforma<br>
+                <i class="ri-check-double-line"></i> Organiser une session de formation sur Digiforma de bout en bout<br>
+                <i class="ri-check-double-line"></i> Utiliser Digiforma pour consolider la démarche qualité
+              </p>
             </ul>
           </p>
+
           <br>
           <h2>Contenu de la formation</h2>
         </div>
@@ -193,16 +200,65 @@ Author : MARDAY Sendinee
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+              <h4 class="title">Organisation d'une formation de bout en bout</h4>
+              <p class="description">
+              <ul>
+                <li> Utilisation de l'éditeur de programmed de formation</li>
+                <li> Structure du catalogue, étude d'un cas concret</li>
+                <li> Travaux pratiques</li>
+              </ul>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+              <h4 class="title">Création d'un catalogue de formation dans Digiforma</h4>
+              <p class="description">
+              <ul>
+                <li> Entrée des informations nécessaires pour la création de la convention</li>
+                <li> Utilisation de la page privée de la formation</li>
+                <li> Processus d'émargement papier et numérique</li>
+                <li> Evaluations de fin de formation</li>
+                <li> Création des attestations</li>
+                <li> Travaux pratiques</li>
+              </ul>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+              <h4 class="title">Consolider la démarche qualité avec Digiforma</h4>
+              <p class="description">
+              <ul>
+                <li> Réaliser avec Digiforma des audits pré-formation auprès du client et des stagiaires</li>
+                <li> Envoyer des évaluations de suivi de formation, créer des statistiques</li>
+              </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <br>
+        <div class="section-title">
+        <h2>Contenu de la formation</h2>
+        </div>
+        <br>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-one-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 1: Pr&#233;sentation de la m&#233;thode Agile</h4>
               <p class="description">
-                <ul>
-                  <li> Les limites de l'approche traditionnelle Soyez Agile - L'histoire de la m&#233;thode</li>
-                  <li> Vous avez dit Scrum ?</li>
-                  <li> Principes de fonctionnement de la gestion de projet Agile - Introduction &#224; la m&#233;thode Scrum</li>
-                  <li> Choix du projet R&#233;partition des r&#244;les</li>
-                  <li> Pr&#233;sentation de la probl&#233;matique</li>
-                </ul>
+              <ul>
+                <li> Les limites de l'approche traditionnelle Soyez Agile - L'histoire de la m&#233;thode</li>
+                <li> Vous avez dit Scrum ?</li>
+                <li> Principes de fonctionnement de la gestion de projet Agile - Introduction &#224; la m&#233;thode Scrum</li>
+                <li> Choix du projet R&#233;partition des r&#244;les</li>
+                <li> Pr&#233;sentation de la probl&#233;matique</li>
+              </ul>
               </p>
             </div>
           </div>
@@ -212,14 +268,14 @@ Author : MARDAY Sendinee
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-two-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 2: SRCUM</h4>
               <p class="description">
-                <ul>
-                  <li> Les m&#233;thodes Agiles</li>
-                  <li> La m&#233;thode K&#233;anban</li>
-                  <li> D&#233;finition et caract&#233;ristiques de Scrum</li>
-                  <li> D&#233;roulement du processus Scrum</li>
-                  <li> Les 5 &#233;tapes de Scrum</li>
-                  <li> G&#233;rer un projet en Scrum</li>
-                </ul>
+              <ul>
+                <li> Les m&#233;thodes Agiles</li>
+                <li> La m&#233;thode K&#233;anban</li>
+                <li> D&#233;finition et caract&#233;ristiques de Scrum</li>
+                <li> D&#233;roulement du processus Scrum</li>
+                <li> Les 5 &#233;tapes de Scrum</li>
+                <li> G&#233;rer un projet en Scrum</li>
+              </ul>
               </p>
             </div>
           </div>
@@ -229,12 +285,12 @@ Author : MARDAY Sendinee
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-three-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 3: Pour aller plus loin</h4>
               <p class="description">
-                <ul>
-                  <li> La m&#233;thode Scrumban</li>
-                  <li> Cr&#233;ation et gestion du "Product Backlog"</li>
-                  <li> "Scrum Of Scrums" : Organiser de grands projets en Scrum (CPO, PO, APO, ScrumMAsters, Guilde, etc.)</li>
-                  <li> Motivation des &#233;quipes conseils pour mettre en oeuvre Scrum</li>
-                </ul>
+              <ul>
+                <li> La m&#233;thode Scrumban</li>
+                <li> Cr&#233;ation et gestion du "Product Backlog"</li>
+                <li> "Scrum Of Scrums" : Organiser de grands projets en Scrum (CPO, PO, APO, ScrumMAsters, Guilde, etc.)</li>
+                <li> Motivation des &#233;quipes conseils pour mettre en oeuvre Scrum</li>
+              </ul>
               </p>
             </div>
           </div>
@@ -244,10 +300,10 @@ Author : MARDAY Sendinee
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-four-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 4: Conclusion</h4>
               <p class="description">
-                <ul>
-                  <li> Serious Game "KAHOOT!"</li>
-                  <li> Finir et commenter l'&#233;tude de cas</li>
-                </ul>
+              <ul>
+                <li> Serious Game "KAHOOT!"</li>
+                <li> Finir et commenter l'&#233;tude de cas</li>
+              </ul>
               </p>
             </div>
           </div>
@@ -309,6 +365,8 @@ Author : MARDAY Sendinee
 
         <div class="section-title">
           <h2>&#201;quipe p&#233;dagogique</h2>
+          <p>La formation est menée directement par un des créateurs du logiciel Digiforma.
+            Il est également formateur professionnel spécialisé dans la transformation digitale des entreprises depuis plus de 10 ans.</p>
         </div>
 
         <div class="row">
@@ -335,7 +393,6 @@ Author : MARDAY Sendinee
                 <li><i class="ri-check-double-line"></i> Questions orales ou &#233;crites (QCM)</li>
                 <li><i class="ri-check-double-line"></i> Mises en situation</li>
                 <li><i class="ri-check-double-line"></i> Formulaires d'&#233;valuation de la formation</li>
-                <li><i class="ri-check-double-line"></i> Certificat de r&#233;alisation de l'action de formation</li>
               </ul>
             </div>
           </div>
@@ -381,7 +438,7 @@ Author : MARDAY Sendinee
               <br>
               <div>
                 <i class="ri-phone-line"></i>
-                <p>06 08 70 50 01</p>
+                <p>06 76 16 27 18</p>
               </div>
 
             </div>
@@ -435,7 +492,7 @@ Author : MARDAY Sendinee
             <a href="#intro" class="scrollto">Home</a>
             <a href="#projet" class="scrollto">Projet</a>
             <a href="privacy_policy.html">Politique de Confidentialité</a>
-            <a href="condition.html">CGV</a>
+            <a href="condition.html">Conditions Générales de Vente</a>
           </nav>
         </div><!-- END : .col-lg-6 -->
       </div><!-- END : .row d-flex align-items-center -->
