--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="">R&#233;f&#233;rent Handicap :</a></h5>
                 <p class="card-text" style="text-align: center;">Jean-Philippe BROWN</p>
+                <p class="card-text" style="text-align: center;"><strong>Mail :</strong> ...</p>
               </div>
             </div>
           </div>
@@ -492,7 +493,7 @@
             <a href="#intro" class="scrollto">Home</a>
             <a href="#projet" class="scrollto">Projet</a>
             <a href="privacy_policy.html">Politique de Confidentialité</a>
-            <a href="condition.html">Conditions Générales de Vente</a>
+            <a href="condition.html">CGV</a>
           </nav>
         </div><!-- END : .col-lg-6 -->
       </div><!-- END : .row d-flex align-items-center -->
