--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
         <br>
         <div class="section-title">
-        <h2>Contenu de la formation</h2>
+        <h2>Les Chapitres</h2>
         </div>
         <br>
 
