--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="">R&#233;f&#233;rent Handicap :</a></h5>
                 <p class="card-text" style="text-align: center;">Jean-Philippe BROWN</p>
-                <p class="card-text" style="text-align: center;"><strong>Mail :</strong> ...</p>
+                <p class="card-text" style="text-align: center;"><strong>Mail :</strong> jbrown@formasmart.com</p>
               </div>
             </div>
           </div>
