--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <h4 class="title">Organisation d'une formation de bout en bout</h4>
               <p class="description">
               <ul>
@@ -207,9 +208,11 @@
                 <li> Travaux pratiques</li>
               </ul>
               </p>
+            </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <h4 class="title">Création d'un catalogue de formation dans Digiforma</h4>
               <p class="description">
               <ul>
@@ -221,9 +224,11 @@
                 <li> Travaux pratiques</li>
               </ul>
               </p>
+            </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <h4 class="title">Consolider la démarche qualité avec Digiforma</h4>
               <p class="description">
               <ul>
@@ -231,6 +236,7 @@
                 <li> Envoyer des évaluations de suivi de formation, créer des statistiques</li>
               </ul>
               </p>
+            </div>
           </div>
         </div>
 
