--- a/index.html
+++ b/index.html
@@ -200,55 +200,6 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <h4 class="title">Organisation d'une formation de bout en bout</h4>
-              <p class="description">
-              <ul>
-                <li> Utilisation de l'éditeur de programmed de formation</li>
-                <li> Structure du catalogue, étude d'un cas concret</li>
-                <li> Travaux pratiques</li>
-              </ul>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <h4 class="title">Création d'un catalogue de formation dans Digiforma</h4>
-              <p class="description">
-              <ul>
-                <li> Entrée des informations nécessaires pour la création de la convention</li>
-                <li> Utilisation de la page privée de la formation</li>
-                <li> Processus d'émargement papier et numérique</li>
-                <li> Evaluations de fin de formation</li>
-                <li> Création des attestations</li>
-                <li> Travaux pratiques</li>
-              </ul>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <h4 class="title">Consolider la démarche qualité avec Digiforma</h4>
-              <p class="description">
-              <ul>
-                <li> Réaliser avec Digiforma des audits pré-formation auprès du client et des stagiaires</li>
-                <li> Envoyer des évaluations de suivi de formation, créer des statistiques</li>
-              </ul>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <br>
-        <div class="section-title">
-        <h2>Les Chapitres</h2>
-        </div>
-        <br>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-one-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
               <h4 class="title">Chapitre 1: Pr&#233;sentation de la m&#233;thode Agile</h4>
               <p class="description">
@@ -307,7 +258,8 @@
               </p>
             </div>
           </div>
-            <br>
+
+          <br>
           <button class="button button1"><a href="https://eu.docworkspace.com/d/sIBGOuLw-4umukAY">Télécharger le programme</a></button>
 
         </div>
@@ -323,25 +275,34 @@
           <div class="col-md-6 d-flex align-items-stretch">
             <div class="card" style='background-image: url("assets/img/profil.jpg");' data-aos="fade-up" data-aos-delay="100">
               <div class="card-body">
-                <h5 class="card-title"><a href="">R&#233;f&#233;rent Handicap :</a></h5>
+                <h5 class="card-title"><a>R&#233;f&#233;rent Handicap :</a></h5>
                 <p class="card-text" style="text-align: center;">Jean-Philippe BROWN</p>
-                <p class="card-text" style="text-align: center;"><strong>Mail :</strong> jbrown@formasmart.com</p>
+                <p class="card-text" style="text-align: center;"><strong>Mail :</strong> ...</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="card" style='background-image: url("assets/img/sablier.jpg");' data-aos="fade-up" data-aos-delay="200">
               <div class="card-body">
-                <h5 class="card-title"><a href="">Dur&#233;e :</a></h5>
+                <h5 class="card-title"><a>Dur&#233;e :</a></h5>
                 <p class="card-text" style="text-align: center;">7h (1jour)</p>
               </div>
             </div>
-
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4">
             <div class="card" style='background-image: url("assets/img/accessibilite.jpg");' data-aos="fade-up" data-aos-delay="100">
               <div class="card-body">
-                <h5 class="card-title"><a href="">Accessibilit&#233; et d&#233;lais d'acc&#232;s :</a></h5>
+                <h5 class="card-title"><a>Accessibilit&#233; :</a></h5>
+                <p class="card-text" style="text-align: center;">Pr&#233;inscription</p>
+                <p class="card-text" style="text-align: center;">Entretien t&#233;l&#233;phonique</p>
+                <p class="card-text" style="text-align: center;">&#201;valuation de pr&#233;formation</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch mt-4">
+            <div class="card" style='background-image: url("assets/img/duree.png");' data-aos="fade-up" data-aos-delay="100">
+              <div class="card-body">
+                <h5 class="card-title"><a>D&#233;lais d'acc&#232;s :</a></h5>
                 <p class="card-text" style="text-align: center;">20 jours</p>
               </div>
             </div>
@@ -349,7 +310,7 @@
           <div class="col-md-6 d-flex align-items-stretch mt-4">
             <div class="card" style='background-image: url("assets/img/prix.jpg");' data-aos="fade-up" data-aos-delay="200">
               <div class="card-body">
-                <h5 class="card-title"><a href="">Prix :</a></h5>
+                <h5 class="card-title"><a>Prix :</a></h5>
                 <p class="card-text" style="text-align: center;">300 €</p>
               </div>
             </div>
@@ -366,8 +327,11 @@
 
         <div class="section-title">
           <h2>&#201;quipe p&#233;dagogique</h2>
-          <p>La formation est menée directement par un des créateurs du logiciel Digiforma.
-            Il est également formateur professionnel spécialisé dans la transformation digitale des entreprises depuis plus de 10 ans.</p>
+          <p>L'ensemble des membres du pôle formation Forma Smart sont à votre écoute pour que vous tiriez le meilleur parti de cette formation.<br>
+          Le formateur expert :<br>
+          Le formateur a pour mission de concevoir et d'animer l'action de formation. À la fois expert du thème de votre formation et pédagogue<br>
+          Expérimenté, il intervient depuis la préparation de la formation jusqu'à l'évaluation et ai suivi de l'action.<br>
+          Tout au long de son action, il apporte aux stagiaires méthodologies et apports pratiques pour développer leurs compétences</p>
         </div>
 
         <div class="row">
@@ -376,11 +340,11 @@
             <div class="box recommended" data-aos="zoom-in" data-aos-delay="100">
               <h3><strong>Moyen p&#233;dagogiques et techniques :</strong></h3>
               <ul>
-                <li><i class="ri-check-double-line"></i> Accueil des apprenants dans une salle d&#233;di&#233;e &#224; la formation</li>
+                <li><i class="ri-check-double-line"></i> Accueil des apprenants dans une plateforme Microsoft Team</li>
                 <li><i class="ri-check-double-line"></i> Documents supports de formation projet&#233;s</li>
                 <li><i class="ri-check-double-line"></i> Expos&#233;s th&#233;oriques</li>
                 <li><i class="ri-check-double-line"></i> &#201;tude de cas concrets</li>
-                <li><i class="ri-check-double-line"></i> Quiz en salle</li>
+                <li><i class="ri-check-double-line"></i> Quiz</li>
                 <li><i class="ri-check-double-line"></i> Mise &#224; disposition en ligne de documents supports &#224; la suite de la formation</li>
               </ul>
             </div>
@@ -434,7 +398,7 @@
 
               <div>
                 <i class="ri-mail-send-line"></i>
-                <div class="media-body"><a class="white" href="mailto:formasmart.fs@gmail.com">formasmart.fs@gmail.com</a></div>
+                <div class="media-body"><a class="white" href="mailto:contact@formasmart.com">contact@formasmart.com</a></div>
               </div>
               <br>
               <div>
@@ -462,7 +426,7 @@
               <div class="my-3">
                 <div class="loading">Chargement ...</div>
                 <div class="error-message">Votre message n'a pas pu &#234;tre envoyer</div>
-                <div class="sent-message">Votre message est envoyer. Merci Beaucoup!</div>
+                <div class="sent-message">Votre message est envoyé. Merci Beaucoup!</div>
               </div>
               <div class="text-center">
                 <button type="submit">Envoyer</button></div>
@@ -493,7 +457,7 @@
             <a href="#intro" class="scrollto">Home</a>
             <a href="#projet" class="scrollto">Projet</a>
             <a href="privacy_policy.html">Politique de Confidentialité</a>
-            <a href="condition.html">CGV</a>
+            <a href="condition.html">Conditions Générales de Vente</a>
           </nav>
         </div><!-- END : .col-lg-6 -->
       </div><!-- END : .row d-flex align-items-center -->
