--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <h2 data-aos="fade-up" data-aos-delay="400">Cette formation est un v&#233;ritable tremplin pour votre entreprise. En effet, vous allez y apprendre le B-A BA de la gestion d'un projet agile.</h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="index.html#information" class="btn-get-started scrollto">En savoir +</a>
+            <a href="https://eu.docworkspace.com/d/sIBGOuLw-4umukAY" class="btn-get-started scrollto">Télécharger la formation</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
@@ -125,8 +126,8 @@
               Profils des apprenants :
             </strong></p>
             <ul>
-              <li><i class="ri-check-double-line"></i>  Formateurs</li>
-              <li><i class="ri-check-double-line"></i>  Gestionnaires d'organisme de formation</li>
+              <li><i class="ri-check-double-line"></i>  Toute personne amenée à gérer des projets Agiles</li>
+              <li><i class="ri-check-double-line"></i>  Toute personne amenée à travailler en mode projet et qui souhaite découvrir une nouvelle approche</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
@@ -134,8 +135,7 @@
               Pr&#233;requis :
             </strong></p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Connaissance basique du secteur de la formation professionnelle </li>
-              <li><i class="ri-check-double-line"></i> Bases de l'usage d'internet et d'un navigateur web</li>
+              <li><i class="ri-check-double-line"></i> Avoir des connaissances de base en gestion de projet, Agilité</li>
             </ul>
           </div>
         </div><!-- END : .row content-->
@@ -186,9 +186,8 @@
           <p><strong>OBJECTIFS P&#201;DAGOGIQUES :</strong><br>
             <ul>
               <p>
-                <i class="ri-check-double-line"></i> Créer un catalogue de formations dans Digiforma<br>
-                <i class="ri-check-double-line"></i> Organiser une session de formation sur Digiforma de bout en bout<br>
-                <i class="ri-check-double-line"></i> Utiliser Digiforma pour consolider la démarche qualité
+                <i class="ri-check-double-line"></i> Apprendre comment adopter une méthode Agile (Scrum) pour réaliser vos projets<br>
+                <i class="ri-check-double-line"></i> Optimiser la qualité, les délais, le budget et les ressources humaines alloués à vos projets
               </p>
             </ul>
           </p>
@@ -201,7 +200,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-one-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
-              <h4 class="title">Chapitre 1: Pr&#233;sentation de la m&#233;thode Agile</h4>
+              <h4 class="title">Pr&#233;sentation de la m&#233;thode Agile</h4>
               <p class="description">
               <ul>
                 <li> Les limites de l'approche traditionnelle Soyez Agile - L'histoire de la m&#233;thode</li>
@@ -217,7 +216,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-two-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
-              <h4 class="title">Chapitre 2: SRCUM</h4>
+              <h4 class="title">SRCUM</h4>
               <p class="description">
               <ul>
                 <li> Les m&#233;thodes Agiles</li>
@@ -234,7 +233,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-three-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
-              <h4 class="title">Chapitre 3: Pour aller plus loin</h4>
+              <h4 class="title">Pour aller plus loin</h4>
               <p class="description">
               <ul>
                 <li> La m&#233;thode Scrumban</li>
@@ -249,7 +248,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <img src="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-four-letters-numbers-and-symbols-soft-fill-soft-fill-juicy-fish.png"/>
-              <h4 class="title">Chapitre 4: Conclusion</h4>
+              <h4 class="title">Conclusion</h4>
               <p class="description">
               <ul>
                 <li> Serious Game "KAHOOT!"</li>
@@ -258,10 +257,6 @@
               </p>
             </div>
           </div>
-
-          <br>
-          <button class="button button1"><a href="https://eu.docworkspace.com/d/sIBGOuLw-4umukAY">Télécharger le programme</a></button>
-
         </div>
 
       </div>
@@ -277,7 +272,7 @@
               <div class="card-body">
                 <h5 class="card-title"><a>R&#233;f&#233;rent Handicap :</a></h5>
                 <p class="card-text" style="text-align: center;">Jean-Philippe BROWN</p>
-                <p class="card-text" style="text-align: center;"><strong>Mail :</strong> ...</p>
+                <p class="card-text" style="text-align: center;"><strong>Mail :</strong>jbrown@formasmart.com</p>
               </div>
             </div>
           </div>
@@ -327,11 +322,10 @@
 
         <div class="section-title">
           <h2>&#201;quipe p&#233;dagogique</h2>
-          <p>L'ensemble des membres du pôle formation Forma Smart sont à votre écoute pour que vous tiriez le meilleur parti de cette formation.<br>
-          Le formateur expert :<br>
-          Le formateur a pour mission de concevoir et d'animer l'action de formation. À la fois expert du thème de votre formation et pédagogue<br>
-          Expérimenté, il intervient depuis la préparation de la formation jusqu'à l'évaluation et ai suivi de l'action.<br>
-          Tout au long de son action, il apporte aux stagiaires méthodologies et apports pratiques pour développer leurs compétences</p>
+          <p>L'ensemble des membres du centre de formation Forma Smart sont à votre écoute pour que vous tiriez le meilleur parti de cette formation.<br>
+          Le formateur a pour mission de concevoir et d'animer l'action de formation.
+          Expérimenté, il intervient depuis la préparation de la formation jusqu'à l'évaluation et au suivi de l'action.<br>
+          Tout au long de son action, il apporte aux stagiaires méthodologies et apports pratiques pour développer leurs compétences.</p>
         </div>
 
         <div class="row">
@@ -340,8 +334,8 @@
             <div class="box recommended" data-aos="zoom-in" data-aos-delay="100">
               <h3><strong>Moyen p&#233;dagogiques et techniques :</strong></h3>
               <ul>
-                <li><i class="ri-check-double-line"></i> Accueil des apprenants dans une plateforme Microsoft Team</li>
-                <li><i class="ri-check-double-line"></i> Documents supports de formation projet&#233;s</li>
+                <li><i class="ri-check-double-line"></i> Accueil des apprenants dans une salle dédiée à la formation (ou à distance via Microsoft Team).</li>
+                <li><i class="ri-check-double-line"></i> Documents supports de formation</li>
                 <li><i class="ri-check-double-line"></i> Expos&#233;s th&#233;oriques</li>
                 <li><i class="ri-check-double-line"></i> &#201;tude de cas concrets</li>
                 <li><i class="ri-check-double-line"></i> Quiz</li>
@@ -352,7 +346,7 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended" data-aos="zoom-in" data-aos-delay="100">
-              <h3><strong>Dispositif de suivi de l'ex&#233;cution de l'&#233;valuation supports &#224; la suite de la formation :</strong></h3>
+              <h3><strong>Dispositif de suivi des l'&#233;valuations :</strong></h3>
               <ul>
                 <li><i class="ri-check-double-line"></i> Feuilles de pr&#233;sence</li>
                 <li><i class="ri-check-double-line"></i> Questions orales ou &#233;crites (QCM)</li>
